tabela funcional e transação em progresso

--- a/templates/pesquisa.html
+++ b/templates/pesquisa.html
@@ -101,10 +101,10 @@
             {% else %}
                 <table>
                     <tr>
-                        <th>Codigo</th>
-                        <th>Nome</th>
+                        <th>Conta</th>
+                        <th>Nome do titular</th>
                         <th>Telefone</th>
-                        <th>Saldo</th>
+                        <th>Saldo atual</th>
                     </tr>
                     <tr>
                         <td>{{ resultado.codigo }}</td>
